<resources>
    <string name="app_name">Payrocket</string>

    <string name="we_are_what_we_do">We are what we do</string>
    <string name="people_are_using_payrockert">Thousand of people are using payrockert has its safe and fast</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account?\u0020</string>
    <string name="login">Login</string>

    <string name="get_started">Get Started</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="invalid_mail">Invalid Email</string>
    <string name="error_missing_field">All fields required</string>
    <string name="invalid_password">Password should be at least 6 char</string>
    <string name="confirm_password_error">Password confirmation doesn\'t match Password</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="no_internet">No Internet Connection</string>

    <string name="next">Next</string>
    <string name="onboarding_visuals">Onboarding visuals</string>
    <string name="onboarding_three">At our core is a powerful payments engine that makes moving money easy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="login_error">Login not successful</string>

    <string-array name="onboarding_titles">
        <item>Secure \nPayments</item>
        <item>Simplified \nTransactions</item>
        <item>Proper \nBudgeting</item>
    </string-array>
    <string-array name="onboarding_descriptions">
        <item>Our cloud-based infrastructure provides
            reliability, scalability, and security</item>
        <item>At our core is a powerful payments
            engine that makes moving money easy</item>
        <item>At our core is a powerful payments
            engine that makes moving money easy</item>
    </string-array>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ehma Ugbogo</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_analytics">Analytics</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="dashboard">Home</string>
    <string name="balance">Balance</string>
    <string name="emergency_reserve">Emergency reserve</string>
    <string name="favorites">Favorites</string>
    <string name="button_used_to_add_favorite">Button used to add Favorite</string>
    <string name="transactions">Transactions</string>
    <string name="transfer_by_email">Transfer BY Email</string>
    <string name="credit_alert">Credit Alert</string>
    <string name="credits">Credits</string>
    <string name="debits">Debits</string>
    <string name="debit_alerts">Debit Alerts</string>
    <string name="transfer_by_account_number">Transfer by acc No</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_login">Remember Login</string>
    <string name="proceed">Proceed</string>
    <string name="no_account">New User? Sign Up</string>
    <string name="already_member">Already Registered? Sign In</string>

</resources>