<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="io.gads.payrocket.ui.dashboard.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/home_fragment"
        />

    <fragment
        android:id="@+id/nav_analytics"
        android:name="io.gads.payrocket.ui.analytics.AnalyticsFragment"
        android:label="@string/menu_analytics"
        tools:layout="@layout/fragment_analytics" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="io.gads.payrocket.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />






</navigation>