<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="io.gads.payrocket.ui.signup.SignUpViewModel" />
    </data>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".ui.signup.RegisterActivity">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/sign_up"
                    android:textColor="@android:color/white"
                    android:textSize="35sp"
                    android:fontFamily="@font/raleway"
                    android:gravity="center"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <EditText
                    android:id="@+id/firstNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="22dp"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/first_name"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:fontFamily="@font/raleway"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:padding="20dp"
                    android:text="@={viewModel.user.firstName}"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    app:layout_constraintEnd_toEndOf="@+id/textView"
                    app:layout_constraintStart_toStartOf="@+id/textView"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    tools:ignore="Autofill" />

                <EditText
                    android:id="@+id/lastNameEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/rounded_edittext"
                    android:fontFamily="@font/raleway"
                    android:textStyle="bold"
                    android:hint="@string/last_name"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:padding="20dp"
                    android:textSize="18sp"
                    android:text="@={viewModel.user.lastName}"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    app:layout_constraintEnd_toEndOf="@+id/firstNameEditText"
                    app:layout_constraintStart_toStartOf="@+id/firstNameEditText"
                    app:layout_constraintTop_toBottomOf="@+id/firstNameEditText" />

                <EditText
                    android:id="@+id/editTextTextEmailAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:text="@={viewModel.user.email}"
                    android:inputType="textEmailAddress"
                    android:importantForAutofill="no"
                    android:fontFamily="@font/raleway"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:background="@drawable/rounded_edittext"
                    android:layout_marginTop="30dp"
                    android:padding="20dp"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    app:layout_constraintTop_toBottomOf="@+id/lastNameEditText"
                    app:layout_constraintLeft_toLeftOf="@id/lastNameEditText"
                    app:layout_constraintRight_toRightOf="@id/lastNameEditText"
                    />

                <LinearLayout
                    android:id="@+id/phoneLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
                    app:layout_constraintLeft_toLeftOf="@id/editTextTextEmailAddress"
                    app:layout_constraintRight_toRightOf="@id/editTextTextEmailAddress">

                    <com.hbb20.CountryCodePicker
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_edittext"
                        android:layout_weight="10"
                        app:ccp_padding="22dp"
                        app:ccp_textSize="14sp"
                        android:fontFamily="@font/raleway"
                        android:textStyle="bold"
                        app:ccp_autoDetectCountry="true"
                        app:ccp_clickable="true"
                        app:ccp_defaultPhoneCode="220"
                        app:ccp_countryAutoDetectionPref="NETWORK_LOCALE"
                        app:ccp_contentColor="@color/colorPrimary"
                        app:ccp_areaCodeDetectedCountry="true"
                        app:ccp_arrowColor="@color/colorPrimary"
                        app:ccpDialog_textColor="@color/colorPrimary"
                        />


                    <EditText
                        android:id="@+id/editTextPhone"
                        android:text="@={viewModel.user.phoneNum}"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="12"
                        android:hint="@string/mobile_number"
                        android:importantForAutofill="no"
                        android:background="@drawable/rounded_edittext"
                        android:inputType="phone"
                        android:padding="20dp"
                        android:textSize="18sp"
                        android:fontFamily="@font/raleway"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        android:textColorHint="@color/colorPrimary"
                        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
                        app:layout_constraintLeft_toLeftOf="@id/editTextTextEmailAddress"
                        app:layout_constraintRight_toRightOf="@id/editTextTextEmailAddress"
                        />

                </LinearLayout>




                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtPassLay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    app:hintEnabled="false"
                    android:layout_marginTop="30dp"
                    app:layout_constraintEnd_toEndOf="@+id/phoneLayout"
                    app:layout_constraintStart_toStartOf="@+id/phoneLayout"
                    app:layout_constraintTop_toBottomOf="@id/phoneLayout"
                    app:passwordToggleDrawable="@drawable/icon_selector"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorPrimary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:fontFamily="@font/raleway"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:background="@drawable/rounded_edittext"
                        android:padding="20dp"
                        android:hint="@string/password"
                        android:text="@={viewModel.user.password}"
                        android:textColor="@color/colorPrimary"
                        android:textColorHint="@color/colorPrimary"
                        />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtConfPassLay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginTop="30dp"
                    app:layout_constraintEnd_toEndOf="@+id/txtPassLay"
                    app:layout_constraintStart_toStartOf="@+id/txtPassLay"
                    app:hintEnabled="false"
                    app:layout_constraintTop_toBottomOf="@id/txtPassLay"
                    app:passwordToggleDrawable="@drawable/icon_selector"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorPrimary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirmPasswordEditTextText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:padding="20dp"
                        android:fontFamily="@font/raleway"
                        android:textStyle="bold"
                        android:background="@drawable/rounded_edittext"
                        android:textSize="18sp"
                        android:hint="@string/confirm_password"
                        android:text="@={viewModel.user.confirmPassword}"
                        android:textColor="@color/colorPrimary"
                        android:textColorHint="@color/colorPrimary"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/rounded_button"
                    android:onClick="@{() -> viewModel.signUp()}"
                    android:paddingLeft="50dp"
                    android:paddingTop="20dp"
                    android:paddingRight="50dp"
                    android:paddingBottom="20dp"
                    android:text="@string/proceed"
                    android:fontFamily="@font/raleway"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toLeftOf="@+id/txtConfPassLay"
                    app:layout_constraintRight_toRightOf="@id/txtConfPassLay"
                    app:layout_constraintTop_toBottomOf="@+id/txtConfPassLay" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:adjustViewBounds="true"
                    android:cropToPadding="true"
                    android:src="@drawable/signup_background"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/button3" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

</layout>