<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:padding="20dp">

                <TextView
                    android:id="@+id/labelBalance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/balance"
                    android:textColor="@color/colorBlueLight"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/accBalance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:gravity="center_horizontal"
                    android:text="$12,999,000"
                    android:textColor="@color/colorBlueLight"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/labelBalance"
                    app:layout_constraintStart_toStartOf="@id/labelBalance"
                    app:layout_constraintTop_toBottomOf="@id/labelBalance" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="@+id/accBalance"
                    app:layout_constraintStart_toStartOf="@+id/accBalance"
                    app:layout_constraintTop_toBottomOf="@id/accBalance"
                    tools:ignore="UselessLeaf">

                    <TextView
                        android:id="@+id/labelEmerg"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="70"
                        android:gravity="end"
                        android:text="@string/emergency_reserve"
                        android:textColor="@color/colorBlueLight"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/accEmergency"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="33"
                        android:gravity="center_horizontal"
                        android:text="$12,999"
                        android:textColor="@color/colorBlueLight"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/labelFav"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="33"
            android:gravity="start"
            android:text="@string/favorites"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/card_view"
            app:layout_constraintStart_toStartOf="@+id/card_view"
            app:layout_constraintTop_toBottomOf="@id/card_view" />

        <LinearLayout
            android:id="@+id/lay_favorite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/labelFav"
            app:layout_constraintStart_toStartOf="@+id/labelFav"
            app:layout_constraintTop_toBottomOf="@id/labelFav">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fav_recycler"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="90"
                android:orientation="horizontal"
                android:requiresFadingEdge="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/favourite_recycler" />

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="15"
                android:background="@android:color/white"
                android:contentDescription="@string/button_used_to_add_favorite"
                android:src="@drawable/ic_baseline_add_circle_24" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearTransaction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:background="@color/colorBlueExtraLight"
            android:elevation="3dp"
            android:orientation="vertical"
            android:padding="13dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lay_favorite">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="50"
                    android:text="@string/transactions"
                    android:textColor="@color/colorPrimary"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_baseline_filter_list_24"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/trans_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                tools:itemCount="4"
                tools:listitem="@layout/up_transaction_recycler" />

        </LinearLayout>

        <Button
            android:id="@+id/trans_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button_red"
            android:text="@string/transfer_by_email"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="17dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="30dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/linearTransaction" />

        <Button
            android:id="@+id/trans_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button_blue"
            android:text="@string/transfer_by_email"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:padding="17dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="30dp"
            app:layout_constraintTop_toBottomOf="@+id/trans_email" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>
